Fixed more layout issues.

--- a/style.css
+++ b/style.css
@@ -575,6 +575,7 @@ hr {
 	position: absolute;
 	top: 160px;
 	right: 15px;
+	padding: 0px 8px 0px 8px;
 	border-radius: 10px;
 }
 
